--- a/EasyMoney/app/src/main/res/layout/activity_expense_tracker.xml
+++ b/EasyMoney/app/src/main/res/layout/activity_expense_tracker.xml
@@ -34,7 +34,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/trackerSavingsTotaltxt" />
+            app:layout_constraintTop_toBottomOf="@+id/trackerIncomeTotaltxt" />
 
         <TextView
             android:id="@+id/trackerSavingsHead"
@@ -48,7 +48,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/trackerSavingsTotaltxt"
+            android:id="@+id/trackerIncomeTotaltxt"
             style="@style/txtMainpageBigNumber"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -62,7 +62,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
-        android:id="@+id/userTrackerFoot"
+        android:id="@+id/userReportFoot"
         android:layout_width="108dp"
         android:layout_height="64dp"
         android:backgroundTint="#FFFFFF"
@@ -72,10 +72,10 @@
         app:iconGravity="top"
         app:iconTint="#676767"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/bETrackerFoot" />
+        app:layout_constraintStart_toEndOf="@+id/bEReportFoot" />
 
     <Button
-        android:id="@+id/bETrackerFoot"
+        android:id="@+id/bEReportFoot"
         android:layout_width="102dp"
         android:layout_height="64dp"
         android:backgroundTint="#FFFFFF"
@@ -85,10 +85,10 @@
         app:iconGravity="top"
         app:iconTint="#676767"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/reportTrackerFoot" />
+        app:layout_constraintStart_toEndOf="@+id/reportReportFoot" />
 
     <Button
-        android:id="@+id/reportTrackerFoot"
+        android:id="@+id/reportReportFoot"
         android:layout_width="102dp"
         android:layout_height="64dp"
         android:backgroundTint="#FFFFFF"
@@ -99,10 +99,10 @@
         app:iconGravity="top"
         app:iconTint="#676767"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/trackerTrackerFoot" />
+        app:layout_constraintStart_toEndOf="@+id/trackerReportFoot" />
 
     <Button
-        android:id="@+id/trackerTrackerFoot"
+        android:id="@+id/trackerReportFoot"
         android:layout_width="102dp"
         android:layout_height="64dp"
         android:backgroundTint="#FFFFFF"
@@ -221,7 +221,7 @@
             app:iconTint="@color/gray3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/trackerIncomeTotaltxt" />
+            app:layout_constraintTop_toBottomOf="@+id/trackerSavingsTotaltxt" />
 
         <TextView
             android:id="@+id/trackerIncomeHead"
@@ -235,7 +235,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/trackerIncomeTotaltxt"
+            android:id="@+id/trackerSavingsTotaltxt"
             style="@style/txtMainpageBigNumber"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -271,7 +271,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/style_btn_white"
-        app:layout_constraintBottom_toTopOf="@+id/userTrackerFoot"
+        app:layout_constraintBottom_toTopOf="@+id/userReportFoot"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -279,25 +279,25 @@
         app:layout_constraintVertical_bias="1.0">
 
         <TextView
-            android:id="@+id/trackerExpenseDate2"
+            android:id="@+id/reportExpenseDate2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:layout_marginEnd="16dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/trackerExpenseDate1" />
+            app:layout_constraintTop_toBottomOf="@+id/reportExpenseDate1" />
 
         <TextView
-            android:id="@+id/trackerExpenseName1"
+            android:id="@+id/reportExpenseName1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="36dp"
             android:layout_marginTop="15dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/trackerExpenseHead" />
+            app:layout_constraintTop_toBottomOf="@+id/ReportExpenseHead" />
 
         <TextView
-            android:id="@+id/trackerExpensePrice1"
+            android:id="@+id/reportExpensePrice1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="48dp"
@@ -306,7 +306,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/trackerExpenseDate1"
+            android:id="@+id/reportExpenseDate1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="49dp"
@@ -321,10 +321,10 @@
             android:layout_marginStart="36dp"
             android:layout_marginTop="15dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/trackerExpenseName1" />
+            app:layout_constraintTop_toBottomOf="@+id/reportExpenseName1" />
 
         <TextView
-            android:id="@+id/trackerExpenseName3"
+            android:id="@+id/reportExpenseName3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="36dp"
@@ -333,61 +333,61 @@
             app:layout_constraintTop_toBottomOf="@+id/trackerExpenseName2" />
 
         <TextView
-            android:id="@+id/trackerExpensePrice3"
+            android:id="@+id/reportExpensePrice3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="196dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/trackerExpensePrice2" />
+            app:layout_constraintTop_toBottomOf="@+id/reportExpensePrice2" />
 
         <TextView
-            android:id="@+id/trackerExpenseDate3"
+            android:id="@+id/reportExpenseDate3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:layout_marginEnd="16dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/trackerExpenseDate2" />
+            app:layout_constraintTop_toBottomOf="@+id/reportExpenseDate2" />
 
         <TextView
-            android:id="@+id/trackerExpenseDate4"
+            android:id="@+id/reportExpenseDate4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:layout_marginEnd="16dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/trackerExpenseDate3" />
+            app:layout_constraintTop_toBottomOf="@+id/reportExpenseDate3" />
 
         <TextView
-            android:id="@+id/trackerExpensePrice4"
+            android:id="@+id/reportExpensePrice4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="180dp"
-            app:layout_constraintEnd_toEndOf="@+id/trackerExpenseDate4"
-            app:layout_constraintTop_toBottomOf="@+id/trackerExpensePrice3" />
+            app:layout_constraintEnd_toEndOf="@+id/reportExpenseDate4"
+            app:layout_constraintTop_toBottomOf="@+id/reportExpensePrice3" />
 
         <TextView
-            android:id="@+id/trackerExpenseName4"
+            android:id="@+id/reportExpenseName4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="36dp"
             android:layout_marginTop="15dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/trackerExpenseName3" />
+            app:layout_constraintTop_toBottomOf="@+id/reportExpenseName3" />
 
         <TextView
-            android:id="@+id/trackerExpensePrice2"
+            android:id="@+id/reportExpensePrice2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
             android:layout_marginEnd="180dp"
-            app:layout_constraintEnd_toEndOf="@+id/trackerExpenseDate2"
-            app:layout_constraintTop_toBottomOf="@+id/trackerExpensePrice1" />
+            app:layout_constraintEnd_toEndOf="@+id/reportExpenseDate2"
+            app:layout_constraintTop_toBottomOf="@+id/reportExpensePrice1" />
 
         <TextView
-            android:id="@+id/trackerExpenseHead"
+            android:id="@+id/ReportExpenseHead"
             style="@style/txtMainpagesubTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
